--- a/templates/add.html
+++ b/templates/add.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	  <meta http-equiv="content-language" content="pl" />
+
+      <meta name="author" content="Dariusz Nitkowski" />
+	  <meta name="robots" content="index, follow" />
     <title>Dodawanie książki</title>
     <style type="text/css">
     *{
