--- a/templates/addresult.html
+++ b/templates/addresult.html
@@ -2,8 +2,10 @@
 <html lang="pl">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta name="author" content="Nitkowski" />
+	  <meta http-equiv="content-language" content="pl" />
 
+      <meta name="author" content="Dariusz Nitkowski" />
+	  <meta name="robots" content="index, follow" />
 
     <title>Biblioteka-Strona główna</title>
 
