--- a/templates/googlebiblioteka.html
+++ b/templates/googlebiblioteka.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 
+	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	  <meta http-equiv="content-language" content="pl" />
 
-      <meta name="author" content="Biblioteka" />
+      <meta name="author" content="Dariusz Nitkowski" />
 	  <meta name="robots" content="index, follow" />
-      <meta charset="utf-8">
     <title>Szukanie książki w google books</title>
     <style type="text/css">
     *{
