--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	  <meta http-equiv="content-language" content="pl" />
 
-      <meta name="author" content="Biblioteka" />
+      <meta name="author" content="Dariusz Nitkowski" />
 	  <meta name="robots" content="index, follow" />
       <meta charset="utf-8">
 
